navbar arrow fix and small spacing fixes

--- a/public/static/std/assets/components/navbar/NavBarDesktop.css
+++ b/public/static/std/assets/components/navbar/NavBarDesktop.css
@@ -8,7 +8,6 @@
 }
 
 @media only screen and (min-width: 1024px) {
-
   /* transitions and animations */
   @keyframes loading {
     0% {
@@ -192,8 +191,12 @@
     color: var(--color-henk-black);
   }
 
-  .masthead-desktop[data-theme="dark"].NavBar--isHovered #utilities-nav__cart .cart__badge,
-  .masthead-desktop[data-theme="dark"].NavBar--isScrolled #utilities-nav__cart .cart__badge {
+  .masthead-desktop[data-theme="dark"].NavBar--isHovered
+    #utilities-nav__cart
+    .cart__badge,
+  .masthead-desktop[data-theme="dark"].NavBar--isScrolled
+    #utilities-nav__cart
+    .cart__badge {
     background-color: var(--color-black);
     color: var(--color-white);
   }
@@ -347,7 +350,8 @@
     display: flex;
   }
 
-  .masthead-desktop .primary-nav-container .atom-logo:hover {}
+  .masthead-desktop .primary-nav-container .atom-logo:hover {
+  }
 
   .masthead-desktop .primary-nav-container .primary-nav {
     display: flex;
@@ -360,6 +364,11 @@
   .masthead-desktop .primary-nav .primary-nav__link {
     text-decoration: none;
     transition: all 0.3s ease;
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    gap: 4px;
+    text-wrap: nowrap;
   }
 
   .masthead-desktop .primary-nav .primary-nav__link:focus {
@@ -368,6 +377,8 @@
 
   .masthead-desktop .primary-nav .primary-nav__link svg {
     transition: all 0.3s ease;
+    top: 2px;
+    position: relative;
   }
 
   .masthead-desktop .primary-nav .primary-nav__link--isActive svg {
@@ -437,7 +448,7 @@
     padding-top: 3rem;
   }
 
-  .masthead-desktop .gallery-controller__controls>li {
+  .masthead-desktop .gallery-controller__controls > li {
     line-height: 40px;
   }
 
@@ -559,7 +570,7 @@
     transform: scale(1.04);
   }
 
-  .masthead-desktop .card:hover .card__image-container+p {
+  .masthead-desktop .card:hover .card__image-container + p {
     --color-text-action: var(--color-text-action-dimmed);
   }
 
@@ -623,7 +634,7 @@
     left: -2em;
   }
 
-  .page-link+sup.highlight {
+  .page-link + sup.highlight {
     left: 0;
     top: -1em;
   }
